<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CRUD</string>
    <string name="hello_world">Hello world!</string>
    <string name="delete">Delete</string>
    <string name="add">Добавить</string>
    <string name="create">Создать</string>
    <string name="title_activity_new_map">NewMap</string>
    <string name="action_settings">Настройки</string>
    <string name="new_map">Карта</string>
    <string name="save">Сохранить</string>
    <string name="title_activity_picket">Пикет</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ок</string>
    <string name="comment">Комментарий</string>
    <string name="left">Лево</string>
    <string name="right">Право</string>
    <string name="up">Вверх</string>
    <string name="down">Вниз</string>
    <string name="length">Длина</string>
    <string name="azimuth">Азимут</string>
    <string name="incline">Наклон</string>
    <string name="back">Обратный</string>
    <string name="author">Author</string>
    <string name="to">До</string>
    <string name="from">От</string>
    <string name="ray">Луч</string>
    <string name="title_activity_edit_prefences">Настройки</string>
    <string name="enter_your_name">Введите ваше имя</string>
    <string name="vasya">Вася</string>
    <string name="action_save">Cохранить</string>
    <string name="name">Название</string>
    <string name="title_activity_pickets_list">PicketsList</string>
    <string name="picket">Pickets</string>
    <string name="caves">Карты</string>
    <string name="title_activity_show_cave">ShowCave</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Изменить</string>
    <string-array name="actions">
        <item>Изменить</item>
        <item>Удалить</item>
    </string-array>

</resources>
